// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown: Rendering: should render closed dropdown menu properly 1`] = `
<div
  className="sc-bczRLJ RcPSw"
>
  <button
    aria-activedescendant="cities_element_tampere"
    aria-controls="cities_dropdown"
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="cities_label"
    className="sc-dkzDqf hfXXFQ"
    onClick={[Function]}
    role="combobox"
  >
    Tampere
    <svg
      fill="none"
      height={14}
      viewBox="0 0 10 6"
      width={9}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0.292893 0.292893C0.683418 -0.0976314 1.31658 -0.0976314 1.70711 0.292893L5 3.58579L8.29289 0.292893C8.68342 -0.0976314 9.31658 -0.0976314 9.70711 0.292893C10.0976 0.683417 10.0976 1.31658 9.70711 1.70711L5.70711 5.70711C5.51957 5.89464 5.26522 6 5 6C4.73478 6 4.48043 5.89464 4.29289 5.70711L0.292893 1.70711C-0.097631 1.31658 -0.097631 0.683417 0.292893 0.292893Z"
        fill="#262626"
      />
    </svg>
  </button>
</div>
`;

exports[`Dropdown: Selecting: should select Espoo properly 1`] = `
<div
  className="sc-bczRLJ RcPSw"
>
  <button
    aria-activedescendant="cities_element_tampere"
    aria-controls="cities_dropdown"
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="cities_label"
    className="sc-dkzDqf hfXXFQ"
    onClick={[Function]}
    role="combobox"
  >
    Tampere
    <svg
      fill="none"
      height={14}
      viewBox="0 0 10 6"
      width={9}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0.292893 0.292893C0.683418 -0.0976314 1.31658 -0.0976314 1.70711 0.292893L5 3.58579L8.29289 0.292893C8.68342 -0.0976314 9.31658 -0.0976314 9.70711 0.292893C10.0976 0.683417 10.0976 1.31658 9.70711 1.70711L5.70711 5.70711C5.51957 5.89464 5.26522 6 5 6C4.73478 6 4.48043 5.89464 4.29289 5.70711L0.292893 1.70711C-0.097631 1.31658 -0.097631 0.683417 0.292893 0.292893Z"
        fill="#262626"
      />
    </svg>
  </button>
</div>
`;

exports[`Dropdown: should render open dropdown menu properly 1`] = `
<div
  className="sc-bczRLJ RcPSw"
>
  <button
    aria-activedescendant="cities_element_tampere"
    aria-controls="cities_dropdown"
    aria-expanded={true}
    aria-haspopup="listbox"
    aria-labelledby="cities_label"
    className="sc-dkzDqf hfXXFQ"
    onClick={[Function]}
    role="combobox"
  >
    Tampere
    <svg
      fill="none"
      height={14}
      viewBox="0 0 10 6"
      width={9}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.70711 5.70708C9.31658 6.0976 8.68342 6.0976 8.29289 5.70708L5 2.41418L1.70711 5.70708C1.31658 6.0976 0.683417 6.0976 0.292892 5.70708C-0.097632 5.31655 -0.0976319 4.68339 0.292892 4.29286L4.29289 0.292862C4.48043 0.105326 4.73478 -3.10365e-05 5 -3.10103e-05C5.26522 -3.09842e-05 5.51957 0.105326 5.70711 0.292862L9.70711 4.29286C10.0976 4.68339 10.0976 5.31655 9.70711 5.70708Z"
        fill="#262626"
      />
    </svg>
  </button>
  <div
    className="sc-gsnTZi iuBPRX"
  >
    <ul
      aria-multiselectable={false}
      className="select-dropdown"
      id="cities_dropdown"
      role="listbox"
      tabIndex={-1}
    >
      <li
        aria-selected={false}
        className="cities_element_all"
        id="cities_element_all"
        onClick={[Function]}
        role="option"
      >
        <label>
          Kaikki kaupungit
        </label>
      </li>
      <li
        aria-selected={false}
        className="cities_element_espoo"
        id="cities_element_espoo"
        onClick={[Function]}
        role="option"
      >
        <label>
          Espoo
        </label>
      </li>
      <li
        aria-selected={false}
        className="cities_element_jyvaskyla"
        id="cities_element_jyvaskyla"
        onClick={[Function]}
        role="option"
      >
        <label>
          Jyväskylä
        </label>
      </li>
      <li
        aria-selected={false}
        className="cities_element_kuopio"
        id="cities_element_kuopio"
        onClick={[Function]}
        role="option"
      >
        <label>
          Kuopio
        </label>
      </li>
      <li
        aria-selected={true}
        className="cities_element_tampere"
        id="cities_element_tampere"
        onClick={[Function]}
        role="option"
      >
        <label>
          Tampere
        </label>
      </li>
    </ul>
  </div>
</div>
`;
